--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "deps": "^1.0.0",
     "lucide-react": "^0.428.0",
